--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --esm --transpile-only src/index.ts",
+    "dev": "tsx --watch src/index.ts",
     "build": "tsc",
     "start": "node --env-file=.env dist/index.js",
     "db:generate": "drizzle-kit generate",
@@ -17,10 +17,11 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@repo/shared":"workspace:*",
+    "@repo/shared": "workspace:*",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
@@ -39,7 +40,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.5.1",
     "prettier": "^3.6.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=20"
