chore: update pnpm-lock.yaml to add tsx and shared package dependencies
- Added tsx version 4.20.3 as a dependency.
- Linked the shared package in the api-gateway.
- Added @types/cors and @types/jsonwebtoken as devDependencies in the api-gateway.
- Removed tsx from the auth-service dependencies.

--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "api-gateway",
+  "name": "@repo/api-gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "private": true,
+  "type": "module",
   "scripts": {
+    "dev": "tsx --watch src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@repo/shared": "workspace:*",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -18,5 +22,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.10"
+  }
 }
