--- a/apps/auth-service/tsconfig.json
+++ b/apps/auth-service/tsconfig.json
@@ -2,14 +2,15 @@
   "extends": "../../tsconfig.json",
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules"],
-  "module":"ESNext",
   "target": "ES2020",
   "moduleResolution": "node",
   "compilerOptions": {
+    "module":"ESNext",
     "outDir": "./dist",
-    "rootDir": "./src"
-  },
-  "paths": {
+    "rootDir": "./src",
+    "paths": {
       "@repo/*": ["../*/src", "../../packages/*/src"]
+    } 
   }
+  
 }
