--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.3",
     "turbo": "^2.5.5",
     "typescript": "5.8.3"
   },
