--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.0.15"
   },
   "keywords": [],
   "author": "",
