--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,6 +17,8 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   }
 }
